# mcp-server-rust

./: ARCHITECTURE.md  COMPLETION_REPORT.md  Cargo.toml  Dockerfile  OPTIMIZATION_REPORT.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  mcp-config.toml  test_client.py
.github/workflows/: rust.yml
src/: lib.rs  main.rs  models.rs  server.rs
src/resources/: mod.rs  resource_handler.rs
src/tools/: builtin_tools.rs  mod.rs  tool_handler.rs
tests/: integration_tests.rs
