[package]
name = "mcp-server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
